[gd_scene load_steps=11 format=3 uid="uid://d0u2seapj875g"]

[ext_resource type="Script" path="res://Scripts/Bird/bird.gd" id="1_4h2vl"]
[ext_resource type="SpriteFrames" uid="uid://bn5ofc4v5g8hy" path="res://Assets/Birds/NewBird/animation.tres" id="2_8dhfy"]
[ext_resource type="Script" path="res://Scripts/Bird/bird_animation.gd" id="3_x8tx3"]
[ext_resource type="Script" path="res://Scripts/Bird/bird_bt_root.gd" id="4_vfg7a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qhqa7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1wr8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hcbt1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fwpsk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0nww"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ghpp"]
radius = 6.0

[node name="Bird" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent", "animatated_spite", "behavioural_tree")]
z_index = 2
collision_layer = 0
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_4h2vl")
nav_agent = NodePath("NavAgent")
animatated_spite = NodePath("AnimatedSprite2D")
behavioural_tree = NodePath("BirdBehaviouralTree")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.15, 0.15)
sprite_frames = ExtResource("2_8dhfy")
animation = &"Flight"
autoplay = "default"
frame_progress = 0.191165
script = ExtResource("3_x8tx3")

[node name="Button" type="Button" parent="."]
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_qhqa7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t1wr8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hcbt1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fwpsk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q0nww")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2ghpp")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
navigation_layers = 3
avoidance_enabled = true
avoidance_mask = 3
debug_enabled = true
debug_use_custom = true

[node name="CalorieTimer" type="Timer" parent="."]
autostart = true

[node name="NavigationTimer" type="Timer" parent="."]
autostart = true

[node name="BirdBehaviouralTree" type="Node" parent="."]
script = ExtResource("4_vfg7a")

[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="navigation_finished" from="NavAgent" to="BirdBehaviouralTree" method="_on_ground_agent_navigation_finished"]
[connection signal="path_changed" from="NavAgent" to="BirdBehaviouralTree" method="_on_ground_agent_path_changed"]
[connection signal="timeout" from="CalorieTimer" to="." method="_on_calorie_timer_timeout"]
